Created validation framework.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,56 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2253/2306858273.py:9: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['large_living_room'] = df['large_living_room'].replace({'No': 0, 'Yes': 1})\n",
-      "/tmp/ipykernel_2253/2306858273.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['parking_space'] = df['parking_space'].replace({'No': 0, 'Yes': 1})\n",
-      "/tmp/ipykernel_2253/2306858273.py:11: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['front_garden'] = df['front_garden'].replace({'No': 0, 'Yes': 1})\n",
-      "/tmp/ipykernel_2253/2306858273.py:12: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['swimming_pool'] = df['swimming_pool'].replace({'No': 0, 'Yes': 1})\n",
-      "/tmp/ipykernel_2253/2306858273.py:13: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['wall_fence'] = df['wall_fence'].replace({'No': 0, 'Yes': 1})\n",
-      "/tmp/ipykernel_2253/2306858273.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['water_front'] = df['water_front'].replace({'No': 0, 'Yes': 1})\n",
-      "/tmp/ipykernel_2253/2306858273.py:15: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['room_size'] = df['room_size'].replace({'small': 0, 'medium': 1, 'large': 2, 'extra_large': 3})\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "land_size_sqm              False\n",
-       "house_size_sqm             False\n",
-       "no_of_rooms                False\n",
-       "no_of_bathrooms            False\n",
-       "large_living_room          False\n",
-       "parking_space              False\n",
-       "front_garden               False\n",
-       "swimming_pool              False\n",
-       "distance_to_school         False\n",
-       "wall_fence                 False\n",
-       "water_front                False\n",
-       "distance_to_supermarket    False\n",
-       "crime_rate_index           False\n",
-       "room_size                  False\n",
-       "property_value             False\n",
-       "construction_year          False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert object columns to numeric\n",
     "df['land_size_sqm'] = pd.to_numeric(df['land_size_sqm'].str.replace(' sqm', ''))\n",
@@ -101,13 +54,13 @@
     "df['house_age'] = pd.to_numeric(df['house_age'].str.replace(' Years', ''))\n",
     "\n",
     "# Convert Yes/No columns to 1/0\n",
-    "df['large_living_room'] = df['large_living_room'].replace({'No': 0, 'Yes': 1})\n",
-    "df['parking_space'] = df['parking_space'].replace({'No': 0, 'Yes': 1})\n",
-    "df['front_garden'] = df['front_garden'].replace({'No': 0, 'Yes': 1})\n",
-    "df['swimming_pool'] = df['swimming_pool'].replace({'No': 0, 'Yes': 1})\n",
-    "df['wall_fence'] = df['wall_fence'].replace({'No': 0, 'Yes': 1})\n",
-    "df['water_front'] = df['water_front'].replace({'No': 0, 'Yes': 1})\n",
-    "df['room_size'] = df['room_size'].replace({'small': 0, 'medium': 1, 'large': 2, 'extra_large': 3})\n",
+    "df['large_living_room'] = pd.to_numeric(df['large_living_room'].replace({'No': '0', 'Yes': '1'}))\n",
+    "df['parking_space'] = pd.to_numeric(df['parking_space'].replace({'No': '0', 'Yes': '1'}))\n",
+    "df['front_garden'] = pd.to_numeric(df['front_garden'].replace({'No': '0', 'Yes': '1'}))\n",
+    "df['swimming_pool'] = pd.to_numeric(df['swimming_pool'].replace({'No': '0', 'Yes': '1'}))\n",
+    "df['wall_fence'] = pd.to_numeric(df['wall_fence'].replace({'No': '0', 'Yes': '1'}))\n",
+    "df['water_front'] = pd.to_numeric(df['water_front'].replace({'No': '0', 'Yes': '1'}))\n",
+    "df['room_size'] = pd.to_numeric(df['room_size'].replace({'small': '0', 'medium': '1', 'large': '2', 'extra_large': '3'}))\n",
     "\n",
     "# Create construction year column\n",
     "df['construction_year'] = dt.date.today().year - df['house_age']\n",
@@ -125,20 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +101,7 @@
        "<Axes: xlabel='property_value', ylabel='Count'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -169,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +142,7 @@
        "<Axes: xlabel='property_value', ylabel='Count'>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +189,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,23 +208,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We split our dataset into train (60%), val (20%) and test (20%) datasets\n",
+    "df_full_train, df_test = train_test_split(df, test_size=0.2, random_state=1)\n",
+    "df_train, df_val = train_test_split(df_full_train, test_size=0.25, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_train.reset_index(drop=True)\n",
+    "df_val = df_val.reset_index(drop=True)\n",
+    "df_test = df_test.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get target variable from the train, val, test datasets\n",
+    "y_train = df_train['property_value'].values\n",
+    "y_val = df_val['property_value'].values\n",
+    "y_test = df_test['property_value'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete the target variable from the datasets\n",
+    "del df_train['property_value']\n",
+    "del df_val['property_value']\n",
+    "del df_test['property_value']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mutual_info_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
+      "  warnings.warn(msg, UserWarning)\n",
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
+      "  warnings.warn(msg, UserWarning)\n",
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_scores = []\n",
+    "\n",
+    "features = df_full_train.columns\n",
+    "\n",
+    "for f in features:\n",
+    "    mi_score = mutual_info_score(df_full_train.property_value, df_full_train[f])\n",
+    "    mi_scores.append({'f': f, 's': mi_score})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort_list(e):\n",
+    "    return e['s']\n",
+    "\n",
+    "mi_scores.sort(reverse=True, key=sort_list)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4954"
+       "[{'f': 'property_value', 's': np.float64(8.274130280049539)},\n",
+       " {'f': 'crime_rate_index', 's': np.float64(6.307303354971627)},\n",
+       " {'f': 'land_size_sqm', 's': np.float64(5.749057605473132)},\n",
+       " {'f': 'house_size_sqm', 's': np.float64(5.698391887044677)},\n",
+       " {'f': 'distance_to_school', 's': np.float64(4.126474549105726)},\n",
+       " {'f': 'distance_to_supermarket', 's': np.float64(4.123743652749198)},\n",
+       " {'f': 'construction_year', 's': np.float64(3.079158172141659)},\n",
+       " {'f': 'no_of_rooms', 's': np.float64(1.8163983365952991)},\n",
+       " {'f': 'no_of_bathrooms', 's': np.float64(1.7880081113999897)},\n",
+       " {'f': 'room_size', 's': np.float64(1.301524649359457)},\n",
+       " {'f': 'swimming_pool', 's': np.float64(0.6597417925970321)},\n",
+       " {'f': 'front_garden', 's': np.float64(0.6552260409553051)},\n",
+       " {'f': 'wall_fence', 's': np.float64(0.654604735625357)},\n",
+       " {'f': 'large_living_room', 's': np.float64(0.5819151449609423)},\n",
+       " {'f': 'parking_space', 's': np.float64(0.5423062909196172)},\n",
+       " {'f': 'water_front', 's': np.float64(0.18839709429779722)}]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n = len(df)\n",
-    "n"
+    "mi_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import DictVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dictionaries\n",
+    "dict_train = df_train.to_dict(orient='records')\n",
+    "dict_val = df_val.to_dict(orient='records')\n",
+    "dict_test = df_test.to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create vectorizer\n",
+    "dv = DictVectorizer(sparse=False)\n",
+    "\n",
+    "# Create feature matrices\n",
+    "X_train = dv.fit_transform(dict_train)\n",
+    "X_val = dv.transform(dict_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.017e+03, 7.000e-01, 5.100e+00, ..., 1.000e+00, 1.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [2.022e+03, 4.520e+00, 3.200e+00, ..., 0.000e+00, 1.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [2.015e+03, 3.220e+00, 3.500e+00, ..., 1.000e+00, 1.000e+00,\n",
+       "        0.000e+00],\n",
+       "       ...,\n",
+       "       [2.005e+03, 2.830e+00, 1.700e+00, ..., 1.000e+00, 1.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [2.002e+03, 9.500e-01, 1.400e+00, ..., 0.000e+00, 0.000e+00,\n",
+       "        0.000e+00],\n",
+       "       [2.002e+03, 4.790e+00, 2.800e+00, ..., 0.000e+00, 1.000e+00,\n",
+       "        0.000e+00]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_val"
    ]
   },
   {
